# sensei

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md
.github/workflows/: pre-release.yml  rust.yml
arch/: PKGBUILD
assets/aur/: .SRCINFO  PKGBUILD
assets/docs/: CNAME  index.html
assets/scripts/: release.sh
docs/: index.html
docs/styles/: sensei.css
scripts/: release.sh
src/: crate_info.rs  main.rs
website/: index.html
website/styles/: sensei.css
