[package]
name = "sensei"
version = "0.2.5"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
edition = "2018"
license = "GPL-2.0"
description = "Sensei is a simple command line tool to open documentation for any crate."
homepage = "https://edfloreshz.github.io/sensei/"
documentation = "https://docs.rs/sensei"
repository = "https://github.com/edfloreshz/sensei/"
readme = "README.md"
exclude = ["docs/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
open = "1.4.0"
fastrand = "1.4.0"